--- a/guilded-rose-web/src/main/resources/static/css/style.css
+++ b/guilded-rose-web/src/main/resources/static/css/style.css
@@ -15,6 +15,30 @@ p.logo {
 }
 
 
+.button.ok {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 6px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;
+}
+
+
+.button:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
+
 #footer{
     position: fixed; /* or absolute */
     right: 50%;
