--- a/gilded-rose-web/src/main/resources/templates/index.html
+++ b/gilded-rose-web/src/main/resources/templates/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Gilded Rose</title>
     <meta charset="UTF-8">
@@ -15,7 +13,7 @@
     <link   href="resources/css/style.css" rel="stylesheet" />
 
     <!-- TODO: put this JS files on resources/js/ -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" ></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" ></script>
 
     <script src="resources/js/script.js" ></script>
