add logout functionality

--- a/gilded-rose-web/src/main/resources/templates/index.html
+++ b/gilded-rose-web/src/main/resources/templates/index.html
@@ -3,28 +3,36 @@
 <head>
     <title>Gilded Rose</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- TODO: replace favicon with the final version -->
     <link href="resources/img/favicon.ico" rel="icon" type="image/x-icon" />
 
     <!-- TODO: put this CSS files on resources/css/ -->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
     <link   href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet" />
-    <link   href="resources/css/style.css" rel="stylesheet" />
+    <link   href="resources/css/main.css" rel="stylesheet" />
 
-    <!-- TODO: put this JS files on resources/js/ -->
+    <!-- TODO: put this JS files on resources/js/  -->
+    <!--    Frist JQuery, then any lib depending on it-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" ></script>
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
+<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" ></script>
+
 
     <script src="resources/js/script.js" ></script>
 
 </head>
 <body>
 
-
-<div id="header" >
-    <p class="logo">Gilded Rose </p>
+<div class="div-header" >
+    <div class="div-logo">
+        <p>Gilded Rose</p>
+    </div>
     <!-- TODO: create the menu here if required -->
+    <div class="container-logout100-btn">
+        <a class="logout100-btn" href="/logout" type="button" title="Logout"></a>
+    </div>
 </div>
 
 <div id="content">
