--- a/gilded-rose-web/src/main/resources/templates/login.html
+++ b/gilded-rose-web/src/main/resources/templates/login.html
@@ -2,13 +2,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-	<title>Login V15</title>
+	<title>Gilded Rose</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
 	<link href="resources/img/favicon.ico" rel="icon" type="image/x-icon" />
+
 	<link href="resources/css/util.css" rel="stylesheet"  />
-	<link href="resources/css/main.css" rel="stylesheet" />
+	<link href="resources/css/login.css" rel="stylesheet" />
 	<!--===============================================================================================-->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" ></script>
 
